--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -12,6 +12,7 @@ css:
 - http://fonts.googleapis.com/css?family=Open+Sans:400,600,700
 - assets/css/bootstrap-multiselect.css
 - assets/css/bootstrap-editable.css
+- assets/css/select2.css
 - assets/css/select2-bootstrap.css
 - assets/css/typeahead.js-bootstrap.css
 - assets/css/address.css
@@ -24,7 +25,7 @@ js:
 - assets/js/moment.min.js
 - assets/js/bootstrap-editable.min.js
 - assets/js/bootstrap-multiselect.js
-- assets/js/select2.min.js
+- http://vitalets.github.io/x-editable/assets/select2/select2.js
 - assets/js/typeaheadjs.js
 - assets/js/typeahead.js
 - assets/js/address.js
