--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -282,8 +282,12 @@ $dropdown-border-radius: 5px !default;
 //== Editable text
 //
 //##
-$editable-input-color:           #333 !default;
-
+$editable-input-color:                #333 !default;
+$editable-border-radius:              5px !default;
+$editable-border-color:               #ccc !default;
+$editable-cursored-color:             #fff;
+$editable-control-width:              240px !default;
+$editable-control-height:               30px !default;
 
 //-- Z-index master list
 //
