--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -108,7 +108,7 @@
     top: 13px;
     // right:13px;
     // left:23px;
-  }
+  };
   h1[id] {
     padding-top: 30px;
   }
@@ -120,5 +120,14 @@
     margin-top: 25px;
     margin-bottom: 20px;
     padding-left: 1px;
-  };
+  }
+}
+
+.bs-editable {
+  .ui {
+    text-align: right;
+  }
+  .form-inline .form-group {
+    margin-right: 0;
+  }
 }
