--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -241,6 +241,7 @@ $input-group-addon-bg:           $gray-lighter !default;
 //** Border color for textual input addons
 $input-group-addon-border-color: $input-border !default;
 
+$input-file-font-size:           15px !default;
 
 //== Dropdowns
 //
