[#73271162] refactoring icons & favicons for responsive

--- a/liquid/_includes/style/favicons.html
+++ b/liquid/_includes/style/favicons.html
@@ -4,7 +4,7 @@
 
   <div class="row favicons">
   {% for name in site.data.favicons %}
-    <div class="col-sm-2">
+    <div class="col-xs-3 col-md-2">
       <div class="item">
         <img src="assets/images/docs/{{ name }}.png" width="32" height="32" alt="{{ name }}">
         <div class="text">{{ name }}</div>
