--- a/liquid/_includes/style/icons.html
+++ b/liquid/_includes/style/icons.html
@@ -4,7 +4,7 @@
 
   <div class="row icons">
   {% for name in site.data.icons %}
-    <div class="col-sm-2">
+    <div class="col-xs-3 col-md-2">
       <div class="item">
         <span class="icon-{{ name }}"></span>
         <div class="text">{{ name }}</div>
