--- a/liquid/_includes/style/logo-usage.html
+++ b/liquid/_includes/style/logo-usage.html
@@ -1,5 +1,47 @@
 <div class="box">
   <h1 id="logo-usage">Logo usage</h1>
   <hr/>
-  <h3>Preferred</h3>
+  <p>The gengo logotype is custom designed to embody many of the aspirational qualities of the brand. Highly efficient, the letterforms are based on oval shapes and subtly contrasted stroke weight. The g and e blend into the background as the letters adapt to any environment they are placed.</p>
+  <p>As a rule, the logo should always be white against a solid color or can be used on top of a photograph depending on the image’s complexity and placement. The logo should have a generous amount of space on either side in order to breathe. Simplicity and white space is key.</p>
+
+  <h2>Preferred</h2>
+  <div class="row">
+    <div class="col-xs-6 col-sm-6 col-md-4">
+      <!-- TODO: add image -->
+      <p>For general public</p>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-4">
+      <!-- TODO: add image -->
+      <p>For general public</p>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-4">
+      <!-- TODO: add image -->
+      <p>Minimal spacing</p>
+    </div>
+  </div>
+
+  <h2>Acceptable</h2>
+  <div class="row">
+    <div class="col-xs-6 col-sm-6 col-md-4">
+      <!-- TODO: add image -->
+      <p>More neutral branding</p>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-4">
+      <!-- TODO: add image -->
+      <p>On a dark background image</p>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-4">
+      <!-- TODO: add image -->
+      <p>On white background</p>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-4">
+      <!-- TODO: add image -->
+      <p>Translator facing</p>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-4">
+      <!-- TODO: add image -->
+      <p>Developer facing</p>
+    </div>
+  </div>
+
 </div>
