--- a/scss/_editable-text.scss
+++ b/scss/_editable-text.scss
@@ -29,6 +29,12 @@
   label {
     font-weight: normal;
   }
+  // select2
+  .select2-container-multi.select2-container-active .select2-choices {
+    border-color: $editable-border-color;
+    -webkit-box-shadow: 0;
+    box-shadow: 0;
+  }
 }
 
 .editable.editable-click.editable-empty {
@@ -123,13 +129,6 @@
   border-top: 0;
 }
 
-.editable-input {
-  .select2-container-multi.select2-container-active .select2-choices {
-    border-color: $editable-border-color;
-    -webkit-box-shadow: 0;
-    box-shadow: 0;
-  }
-}
 
 .select2-container {
   .select2-choice {
