[#73271162] refactoring style page css

--- a/liquid/_includes/style/favicons.html
+++ b/liquid/_includes/style/favicons.html
@@ -1,8 +1,8 @@
-<div class="box">
-  <h1 id="favicons">Favicons</h1>
-  <hr/>
+<div class="box favicons">
+  <h1 id="favicons">Favicon</h1>
+  <!-- <hr/> -->
 
-  <div class="row favicons">
+  <div class="row">
   {% for name in site.data.favicons %}
     <div class="col-xs-3 col-md-2">
       <div class="item">
