--- a/liquid/_includes/style/icons.html
+++ b/liquid/_includes/style/icons.html
@@ -1,8 +1,8 @@
-<div class="box">
+<div class="box icons">
   <h1 id="icons">Icons</h1>
-  <hr/>
+  <!-- <hr/> -->
 
-  <div class="row icons">
+  <div class="row">
   {% for name in site.data.icons %}
     <div class="col-xs-3 col-md-2">
       <div class="item">
