--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,3 +1,16 @@
+
+// Emphasis & misc
+// -------------------------
+
+small,
+.small {
+  font-size: 85%;
+  line-height: 18px;
+}
+
+// Lists
+// -------------------------
+
 ul,
 ol {
   padding-left: 36px;
@@ -6,8 +19,7 @@ ol {
 }
 
 blockquote {
+  margin: 0 0 ($grid-gutter-width / 2) ($grid-gutter-width / 2);
   padding: 0 ($grid-gutter-width / 2);
-  margin: 0 0 ($grid-gutter-width / 2);
   border-left: 3px solid $blockquote-border-color;
-  margin-left: 18px;
 }
