--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -13,6 +13,7 @@
 @import "dropdowns";
 @import "tables";
 @import "editable-text";
+@import "_supported-controls";
 @import "modals";
 @import "status";
 @import "breadcrumbs";
