--- a/scss/_dropdowns.scss
+++ b/scss/_dropdowns.scss
@@ -61,3 +61,37 @@
     }
   }
 }
+
+.translator {
+  .multiselect-container {
+    &.dropdown-menu {
+      .active > a,
+      .active > a:hover,
+      .active > a:active {
+        background-color: $brand-translator;
+      }
+    }
+  }
+}
+.developer {
+  .multiselect-container {
+    &.dropdown-menu {
+      .active > a,
+      .active > a:hover,
+      .active > a:active {
+        background-color: $brand-developer;
+      }
+    }
+  }
+}
+.admin {
+  .multiselect-container {
+    &.dropdown-menu {
+      .active > a,
+      .active > a:hover,
+      .active > a:active {
+        background-color: $brand-admin;
+      }
+    }
+  }
+}
