--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -14,6 +14,7 @@
 @import "tables";
 @import "editable-text";
 @import "_supported-controls";
+@import "_validation-states";
 @import "modals";
 @import "status";
 @import "breadcrumbs";
