--- a/liquid/_includes/components/validation-states.html
+++ b/liquid/_includes/components/validation-states.html
@@ -39,7 +39,7 @@
     <div class="form-group has-success has-feedback">
       <label class="control-label" for="inputSuccess2">Input with success</label>
       <input type="text" class="form-control" id="inputSuccess2">
-      <span class="icon-check form-control-feedback"></span>
+      <span class="icon-validation form-control-feedback"></span>
     </div>
     <div class="form-group has-warning has-feedback">
       <label class="control-label" for="inputWarning2">Input with warning</label>
@@ -49,7 +49,7 @@
     <div class="form-group has-error has-feedback" style="right:0;">
       <label class="control-label" for="inputError2">Input with error</label>
       <input type="text" class="form-control" id="inputError2">
-      <span class="icon-close form-control-feedback"></span>
+      <span class="icon-error form-control-feedback"></span>
     </div>
   </div>
   <br>
@@ -58,7 +58,7 @@
 <div class="form-group has-success has-feedback">
   <label class="control-label" for="inputSuccess2">Input with success</label>
   <input type="text" class="form-control" id="inputSuccess2">
-  <span class="icon-check form-control-feedback"></span>
+  <span class="icon-validation form-control-feedback"></span>
 </div>
 <div class="form-group has-warning has-feedback">
   <label class="control-label" for="inputWarning2">Input with warning</label>
@@ -68,7 +68,7 @@
 <div class="form-group has-error has-feedback" style="right:0;">
   <label class="control-label" for="inputError2">Input with error</label>
   <input type="text" class="form-control" id="inputError2">
-  <span class="icon-close form-control-feedback"></span>
+  <span class="icon-error form-control-feedback"></span>
 </div>
 {% endhighlight %}
 
@@ -78,7 +78,7 @@
         <label class="control-label col-sm-3" for="inputSuccess3">Input with success</label>
         <div class="col-sm-9">
           <input type="text" class="form-control" id="inputSuccess3">
-          <span class="icon-check form-control-feedback"></span>
+          <span class="icon-validation form-control-feedback"></span>
         </div>
       </div>
     </form>
@@ -90,7 +90,7 @@
     <label class="control-label col-sm-3" for="inputSuccess3">Input with success</label>
     <div class="col-sm-9">
       <input type="text" class="form-control" id="inputSuccess3">
-      <span class="icon-check form-control-feedback"></span>
+      <span class="icon-validation form-control-feedback"></span>
     </div>
   </div>
 </form>
@@ -101,7 +101,7 @@
       <div class="form-group has-success has-feedback">
         <label class="control-label" for="inputSuccess4">Input with success</label>
         <input type="text" class="form-control" id="inputSuccess4">
-        <span class="icon-check form-control-feedback"></span>
+        <span class="icon-validation form-control-feedback"></span>
       </div>
     </form>
   </div>
@@ -111,7 +111,7 @@
   <div class="form-group has-success has-feedback">
     <label class="control-label" for="inputSuccess4">Input with success</label>
     <input type="text" class="form-control" id="inputSuccess4">
-    <span class="icon-check form-control-feedback"></span>
+    <span class="icon-validation form-control-feedback"></span>
   </div>
 </form>
 {% endhighlight %}
