--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -291,7 +291,7 @@ $workbench-icon-active-color: #fff !default;
 
   .navbar-right {
     margin-right: 0;
-    padding-right: 36px;
+    padding-right: $grid-gutter-width;
 
     .btn,
     .navbar-text {
