[#73271162] some refactoring for demo

--- a/liquid/_includes/style/logo-usage.html
+++ b/liquid/_includes/style/logo-usage.html
@@ -1,14 +1,13 @@
 <div class="box logo-usage">
-  <h1 id="logo-usage">Logo usage</h1>
+  <h1 id="logo-usage">Logo</h1>
   <hr/>
   <p>The gengo logotype is custom designed to embody many of the aspirational qualities of the brand. Highly efficient, the letterforms are based on oval shapes and subtly contrasted stroke weight. The g and e blend into the background as the letters adapt to any environment they are placed.<br><br>As a rule, the logo should always be white against a solid color or can be used on top of a photograph depending on the image’s complexity and placement. The logo should have a generous amount of space on either side in order to breathe. Simplicity and white space is key.</p>
 
   <h2>Preferred</h2>
   <div class="row">
     <div class="col-xs-6 col-md-4">
-      <div class="item">
+      <div class="image-wrap">
         <!-- TODO: add image -->
-        <p>For general public</p>
         <div class="download-links">
           <div class="links">
             <a href="#">PNG</a>
@@ -16,11 +15,11 @@
           </div>
         </div>
       </div>
+      <p>For general public</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <div class="item">
+      <div class="image-wrap">
         <!-- TODO: add image -->
-        <p>For general public</p>
         <div class="download-links">
           <div class="links">
             <a href="#">PNG</a>
@@ -28,11 +27,11 @@
           </div>
         </div>
       </div>
+      <p>For general public</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <div class="item">
+      <div class="image-wrap">
         <!-- TODO: add image -->
-        <p>Minimal spacing</p>
         <div class="download-links">
           <div class="links">
             <a href="#">PNG</a>
@@ -40,6 +39,7 @@
           </div>
         </div>
       </div>
+      <p>Minimal spacing</p>
     </div>
   </div>
 
@@ -47,22 +47,27 @@
   <div class="row">
     <div class="col-xs-6 col-md-4">
       <!-- TODO: add image -->
+      <div class="image-wrap"></div>
       <p>More neutral branding</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <!-- TODO: add image -->
+      <div class="image-wrap"></div>
       <p>On a dark background image</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <!-- TODO: add image -->
+      <div class="image-wrap"></div>
       <p>On white background</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <!-- TODO: add image -->
+      <div class="image-wrap"></div>
       <p>Translator facing</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <!-- TODO: add image -->
+      <div class="image-wrap"></div>
       <p>Developer facing</p>
     </div>
   </div>
