refactor _editable-text.scss
- use mixin when useful
- color switching support: customer, translator, developer, admin

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -289,6 +289,7 @@ $editable-border-color:               #ccc !default;
 $editable-cursored-color:             #fff;
 $editable-control-width:              240px !default;
 $editable-control-height:               30px !default;
+$editable-empty-color:                #d14 !default;
 
 //-- Z-index master list
 //
