--- a/liquid/_includes/style/typography.html
+++ b/liquid/_includes/style/typography.html
@@ -1,10 +1,13 @@
-<div class="box">
+<div class="box typography">
   <h1 id="typography">Typography</h1>
   <hr/>
-  <h1>Header 1</h1>
-  <h2>Header 2</h2>
-  <h3>Header 3</h3>
-  <h4>Header 4</h4>
+
+  <div class="headers">
+    <h1>Header 1</h1>
+    <h2>Header 2</h2>
+    <h3>Header 3</h3>
+    <h4>Header 4</h4>
+  </div>
 {% highlight html %}
 <h1>Header 1</h1>
 <h2>Header 2</h2>
