--- a/liquid/_includes/style/doctype-icons.html
+++ b/liquid/_includes/style/doctype-icons.html
@@ -1,4 +1,21 @@
-<div class="box">
+<div class="box doctype">
   <h1 id="doctype-icons">Doctype Icons</h1>
   <hr/>
+
+  <div class="row">
+  {% for doctype in site.data.doctype %}
+    <div class="col-xs-3 col-md-2">
+      <div class="item">
+        <span class="{{ doctype.class }}"></span>
+        <div class="text">{{ doctype.name }}</div>
+      </div>
+    </div>
+  {% endfor %}
+  </div>
+{% highlight html %}
+{% for doctype in site.data.doctype %}
+<!-- {{ doctype.name }} -->
+<i class="{{ doctype.class }}"></i>{% endfor %}
+{% endhighlight %}
+
 </div>
