--- a/liquid/_includes/style/favicons.html
+++ b/liquid/_includes/style/favicons.html
@@ -1,15 +1,18 @@
-<div class="box">
-  <h1 id="favicons">Favicons</h1>
-  <hr/>
+<div class="box favicons">
+  <h1 id="favicons">Favicon</h1>
+  <!-- <hr/> -->
 
-  <ul class="list-inline favicons">
-    {% for name in site.data.favicons %}
-      <li>
+  <div class="row">
+  {% for name in site.data.favicons %}
+    <div class="col-xs-3 col-md-2">
+      <div class="item">
         <img src="assets/images/docs/{{ name }}.png" width="32" height="32" alt="{{ name }}">
         <div class="text">{{ name }}</div>
-      </li>
-    {% endfor %}
-   </ul>
+      </div>
+    </div>
+  {% endfor %}
+  </div>
+
 {% highlight html %}
 <link rel="icon" href="assets/favicons/gengo.ico" type="image/x-icon">
 <link rel="icon" href="assets/favicons/customer.ico" type="image/x-icon">
