--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,13 +1,24 @@
-ul,
-ol {
-  padding-left: 32px;
+// Emphasis & misc
+// -------------------------
 
-  li { line-height: 24px; }
+small,
+.small {
+  font-size: 85%;
+  line-height: 18px;
 }
 
+// Lists
+// -------------------------
+
+ul,
+ol {
+  padding-left: 36px;
+
+  li { line-height: $line-height-list; }
+}
 
 blockquote {
+  margin: 0 0 ($grid-gutter-width / 2) ($grid-gutter-width / 2);
   padding: 0 ($grid-gutter-width / 2);
-  margin: 0 0 ($grid-gutter-width / 2);
   border-left: 3px solid $blockquote-border-color;
 }
