--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -86,6 +86,7 @@ $font-size-h6:            11px !default;
 
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base:        1.5 !default; // 20/14
+$line-height-list:        24px !default;
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed:    floor(($font-size-base * $line-height-base)) !default; // ~20px
 
